welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: type mismatch;
 found   : Array[Int]
 required: Int
 var occurences = Array.fill(nums)(0)
                             ^