welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  
 var occurences = Array.fill(nums)(0)
 return false
}